--- a/readme
+++ b/readme
@@ -1,7 +1,1 @@
-echo "# quantavedave" >> README.md
-git init
-git add README.md
-git commit -m "first commit"
-git branch -M main
-git remote add origin https://github.com/quantavedave/quantavedave.git
-git push -u origin main
+print("hello if you see this you like men")
